express/blocks/template-x/template-x.css
/* ... */
.template-x.horizontal .template .still-wrapper img,
.template-x.horizontal .template .still-wrapper video {
    height: 200px;
    width: auto;
}

.template-x-wrapper .template-title.horizontal h4 {
    font-size: 22px;
    line-height: 26px;
}

.template-x-wrapper.holiday .template-title.horizontal h4 {
    text-align: left;
    margin-top: 14px;
    margin-bottom: 14px;
    font-size: 16px;
}

.template-x-wrapper .template-title.horizontal .template:not(.placeholder) .template-link {
    display: none;
}

.template-x.horizontal.mini .template {
    min-height: unset;
    max-height: 100px;
    max-width: 200px;
    margin: 0 4px;
}

.template-x.horizontal.mini .template.placeholder {
    height: 100px;
    width: 60px;
    margin: 0 4px 0 12px;
}

.template-x.horizontal.mini .template.placeholder > div:first-of-type {
    height: unset;
    width: unset;
    display: block;
    padding-top: 16px;
}

.template-x.horizontal.mini .template.placeholder svg {
    height: 18px;
    width: 18px;
}

.template-x.horizontal.mini .template.placeholder .template-link {
    font-size: 12px;
}

.template-x.horizontal.mini .template img,
.template-x.horizontal.mini .template video {
    object-fit: cover;
    height: 100px;
}

.template-x.horizontal.mini .template .icon-free-badge {
    height: 14px;
    font-size: 8px;
    padding: 0 5px;
    right: 4px;
    top: 4px;
}

.template-x.sixcols .template,
.template-x.fullwidth .template {
    position: relative;
    display: inline-flex;
    width: 165px;
    margin: 5px;
}

.template-x.fullwidth.lg-view .template,
.template-x.fullwidth.md-view .template,
.template-x.fullwidth.sm-view .template {
    width: 92%;
}

.template-x.horizontal.fullwidth .template {
    width: auto;
}

.template-x.horizontal .template:not(.placeholder) img,
.template-x.horizontal .template:not(.placeholder) video,
.template-x.sixcols .template:not(.placeholder) img,
.template-x.sixcols .template:not(.placeholder) video,
.template-x.fullwidth .template:not(.placeholder) img,
.template-x.fullwidth .template:not(.placeholder) video {
    transition: transform .3s ease-in-out;
    will-change: transform;
}

.template-x.sixcols .template:not(.placeholder) .button-container,
.template-x.fullwidth .template:not(.placeholder) .button-container {
    position: absolute;
    width: 120%;
    border-radius: 20px;
    min-height: 120%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
    text-align: center;
    transition: opacity .3s ease-in-out;
    will-change: opacity;
}

.template-x.horizontal .template:not(.placeholder) .button-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
    text-align: center;
    transition: opacity .3s ease-in-out;
    will-change: opacity;
    border-radius: 12px;
    min-height: unset;
    box-sizing: border-box;
    height: 120%;
    width: 120%;
}

.template-x.horizontal .template:not(.placeholder) .template-link,
.template-x.sixcols .template:not(.placeholder) .template-link,
.template-x.fullwidth .template:not(.placeholder) .template-link {
    opacity: 0;
    transition: opacity .4s ease-in-out .2s;
    will-change: opacity;
}

.template-x.horizontal .template:hover:not(.placeholder) .button-container,
.template-x.horizontal .template:hover:not(.placeholder) .template-link,
.template-x.sixcols .template:hover:not(.placeholder) .button-container,
.template-x.sixcols .template:hover:not(.placeholder) .template-link,
.template-x.fullwidth .template:hover:not(.placeholder) .button-container,
.template-x.fullwidth .template:hover:not(.placeholder) .template-link {
    opacity: 1;
    cursor: pointer;
    z-index: 1;
}

.template-x.horizontal .template:not(.placeholder) .template-link,
.template-x.sixcols .template:not(.placeholder) .template-link,
.template-x.fullwidth .template:not(.placeholder) .template-link {
    text-decoration: none;
    border-radius: 18px;
    padding: 5px 1.2em 6px 1.2em;
    text-align: center;
    font-size: var(--body-font-size-s);
    font-style: normal;
    font-weight: 600;
    line-height: var(--body-line-height);
    cursor: pointer;
    color: var(--color-black);
    background-color: var(--color-white);
    margin: 10px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    height: fit-content;
}

.template-x.horizontal.mini .template:not(.placeholder) .template-link {
    padding: 2px 4px;
    font-size: 8px;
}

.template-x.horizontal .template:not(.placeholder) .template-link::after,
.template-x.sixcols .template:not(.placeholder) .template-link::after,
.template-x.fullwidth .template:not(.placeholder) .template-link::after {
    display: none;
}

.template-x .template.placeholder {
    box-sizing: border-box;
    display: flex;
    position: relative;
    justify-content: flex-start;
    align-items: center;
    border-radius: 14px;
    border: 2px dashed var(--color-gray-300);
    height: 242px;
    width: 200px;
    margin: 21px auto 53px;
    padding: 0;
}

.template-x.horizontal .template.placeholder,
.template-x.horizontal.fullwidth .template.placeholder {
    margin: 0 11px;
}

.template-x.sixcols .template.placeholder,
.template-x.fullwidth .template.placeholder {
    width: 145px;
    margin: 15px auto;
}

.template-x.fullwidth.lg-view .template.placeholder,
.template-x.fullwidth.md-view .template.placeholder,
.template-x.fullwidth.sm-view .template.placeholder {
    margin: 21px auto;
    max-width: 80%;
    max-height: 30vh;
    min-height: 120px;
    z-index: 0;
}

.template-x.fullwidth.lg-view .template.placeholder {
    width: 335px;
}

.template-x.fullwidth.md-view .template.placeholder {
    width: 165.5px;
}

.template-x.fullwidth.sm-view .template.placeholder {
    width: 106.33px;
}

.template-x .template.placeholder div:nth-of-type(2) {
    margin: 0;
    position: absolute;
    padding: 0 20px;
    bottom: 10%;
}
/* ... */

